--- a/config/model_configs/single_column_radiative_equilibrium_clearsky_prognostic_surface_temp.yml
+++ b/config/model_configs/single_column_radiative_equilibrium_clearsky_prognostic_surface_temp.yml
@@ -1,16 +1,18 @@
 
-rad: "clearsky" 
-idealized_h2o: true 
-hyperdiff: "false" 
-config: "column" 
-initial_condition: "IsothermalProfile" 
+rad: "clearsky"
+idealized_h2o: true
+hyperdiff: "false"
+config: "column"
+initial_condition: "IsothermalProfile"
 z_max: 70000
-z_elem: 70 
-dz_bottom: 100 
-dz_top: 10000 
-t_end: "654days" 
-dt: "3hours" 
-dt_save_to_sol: "30hours" 
-dt_save_to_disk: "100days" 
-prognostic_surface: "true" 
+z_elem: 70
+dz_bottom: 100
+dz_top: 10000
+t_end: "654days"
+dt: "3hours"
+dt_save_to_sol: "30hours"
+dt_save_to_disk: "100days"
+prognostic_surface: "true"
+surface_setup: DefaultExchangeCoefficients
+toml: [toml/single_column_radiative_equilibrium_clearsky_prognostic_surface_temp.toml]
 job_id: "single_column_radiative_equilibrium_clearsky_prognostic_surface_temp"
